# chalice-example

./: .gitignore  README.md  config.py  delete.sh  deploy.sh  internal_chalice_app.py  pyproject.toml  run
example/: app.py  requirements.txt
example/.chalice/: config.json
example/infra/: chalice.tf.json  config_backend.py
infra/: main.tf  outputs.tf  versions.tf
tests/: test_example.py
